--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -50,4 +50,22 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: yarn
     - run: yarn build
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    if: github.ref == 'master'
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v1
+    - name: Node setup
+      uses: actions/setup-node@v1
+      with:
+        node-version: 12
+    - name: Prepare
+      run: yarn && yarn build
+    - name: Release
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      run: yarn semantic-release
 
