--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "mock-fs": "^4.11.0",
         "pre-commit": "^1.2.2",
         "prettier": "^1.19.1",
-        "rimraf": "^3.0.2"
+        "rimraf": "^3.0.2",
+        "semantic-release": "^17.0.4"
     }
 }
