--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -30,6 +30,7 @@ jobs:
     - run: yarn
     - run: yarn test:coverage
     - name: Coverage
+      if: ${{ matrix.node-version }} == 12.x
       uses: codecov/codecov-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
