--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -53,6 +53,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    needs: [build, lint, test]
     steps:
     - name: Checkout
       uses: actions/checkout@v1
