--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -34,7 +34,7 @@ jobs:
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         fail_ci_if_error: true
-  
+
   build:
     runs-on: ubuntu-latest
     needs: test
@@ -48,7 +48,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: yarn
+    - run: yarn --frozen-lockfile
     - run: yarn build
   release:
     name: Release
