--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "devDependencies": {
         "@babel/cli": "^7.8.4",
         "@babel/core": "^7.8.6",
+        "@babel/preset-env": "^7.8.7",
         "@tophat/eslint-config": "^0.6.0",
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.10.0",
