--- a/babel.config.json
+++ b/babel.config.json
@@ -1,5 +1,5 @@
 {
     "comments": false,
     "ignore": ["**/*.test.js"],
-    "presets": [["@babel/preset-env", { "targets": { "node": 10 } }]]
+    "presets": ["@babel/preset-typescript", ["@babel/preset-env", { "targets": { "node": 10 } }]]
 }
