--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     ],
     "scripts": {
         "prebuild": "rimraf dist",
-        "build": "babel src -d dist",
-        "lint": "eslint src *.js",
+        "build": "babel src -d dist --extensions .ts",
+        "lint": "eslint src/**/*.ts",
         "lint:fix": "yarn lint --fix",
         "test": "jest src",
         "test:watch": "yarn test --watchAll",
@@ -43,7 +43,12 @@
         "@babel/cli": "^7.8.4",
         "@babel/core": "^7.8.6",
         "@babel/preset-env": "^7.8.7",
+        "@babel/preset-typescript": "^7.12.7",
         "@tophat/eslint-config": "^0.7.0",
+        "@types/jest": "^26.0.19",
+        "@types/node": "^14.14.13",
+        "@typescript-eslint/eslint-plugin": "^4.9.1",
+        "@typescript-eslint/parser": "^4.9.1",
         "eslint": "^7.0.0",
         "eslint-config-prettier": "^6.10.0",
         "eslint-plugin-import": "^2.20.1",
@@ -54,6 +59,7 @@
         "pre-commit": "^1.2.2",
         "prettier": "^2.0.5",
         "rimraf": "^3.0.2",
-        "semantic-release": "^17.0.4"
+        "semantic-release": "^17.0.4",
+        "typescript": "^4.1.3"
     }
 }
