--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ lerna-debug.log*
 !.yarn/plugins
 !.yarn/versions
 !.yarn/sdks
-.pnp.*i
+.pnp.*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
