--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,6 +1,6 @@
 name: packwatch CI
 
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
   lint:
@@ -49,22 +49,3 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: yarn --immutable
     - run: yarn build
-  release:
-    name: Release
-    runs-on: ubuntu-latest
-    needs: [build, lint, test]
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v1
-    - name: Node setup
-      uses: actions/setup-node@v1
-      with:
-        node-version: 14
-    - name: Prepare
-      run: yarn && yarn build
-    - name: Release
-      env:
-        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      run: yarn semantic-release
-
