--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "url": "https://github.com/mcataford/packwatch.git"
     },
     "scripts": {
-        "prebuild": "rimraf dist",
+        "prepack": "yarn build",
+        "prebuild": "rm -rf dist",
         "build": "babel src/index.ts src/cli.ts -d dist --extensions .ts",
         "lint": "eslint src/**/*.ts",
         "lint:fix": "yarn lint --fix",
@@ -55,7 +56,6 @@
         "eslint-plugin-prettier": "^3.1.2",
         "jest": "^26.0.1",
         "prettier": "^2.0.5",
-        "rimraf": "^3.0.2",
         "typescript": "^4.1.3"
     }
 }
