--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "eslint-plugin-prettier": "^3.1.2",
         "jest": "^26.0.1",
         "prettier": "^2.0.5",
+        "ts-jest": "^26",
         "typescript": "^4.1.3"
     }
 }
