--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "author": "Marc Cataford <c.marcandre@gmail.com>",
     "license": "MIT",
     "files": [
-        "dist/*.ts"
+        "dist/*.js"
     ],
     "bin": "./dist/cli.js",
     "repository": {
@@ -29,7 +29,7 @@
     "scripts": {
         "prepack": "yarn build",
         "prebuild": "rm -rf dist",
-        "build": "babel src/index.ts src/cli.ts -d dist --extensions .ts",
+        "build": "tsc --project .",
         "lint": "eslint src/**/*.ts",
         "lint:fix": "yarn lint --fix",
         "test": "jest src",
@@ -39,15 +39,11 @@
         "types:watch": "yarn types --watch"
     },
     "devDependencies": {
-        "@babel/cli": "^7.8.4",
-        "@babel/core": "^7.8.6",
-        "@babel/preset-env": "^7.8.7",
-        "@babel/preset-typescript": "^7.12.7",
         "@tophat/eslint-config": "^0.7.0",
         "@types/jest": "^26.0.19",
         "@types/node": "^14.14.13",
-        "@typescript-eslint/eslint-plugin": "^4.9.1",
-        "@typescript-eslint/parser": "^4.9.1",
+        "@typescript-eslint/eslint-plugin": "^4.26.0",
+        "@typescript-eslint/parser": "^4.26.0",
         "eslint": "^7.0.0",
         "eslint-config-prettier": "^7.2.0",
         "eslint-import-resolver-node": "^0.3.4",
@@ -57,6 +53,6 @@
         "jest": "^26.0.1",
         "prettier": "^2.0.5",
         "ts-jest": "^26",
-        "typescript": "^4.1.3"
+        "typescript": "^4.3.2"
     }
 }
