--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "author": "Marc Cataford <c.marcandre@gmail.com>",
     "license": "MIT",
     "files": [
-        "dist/*.ts"
+        "dist/*.js"
     ],
     "bin": "./dist/cli.js",
     "repository": {
@@ -29,25 +29,21 @@
     "scripts": {
         "prepack": "yarn build",
         "prebuild": "rm -rf dist",
-        "build": "babel src/index.ts src/cli.ts -d dist --extensions .ts",
-        "lint": "eslint src/**/*.ts",
+        "build": "tsc --project .",
+        "lint": "eslint tests/**/*.ts src/**/*.ts",
         "lint:fix": "yarn lint --fix",
-        "test": "jest src",
+        "test": "jest tests",
         "test:watch": "yarn test --watchAll",
         "test:coverage": "yarn test --coverage",
         "types": "tsc --noEmit src/**/*.ts",
         "types:watch": "yarn types --watch"
     },
     "devDependencies": {
-        "@babel/cli": "^7.8.4",
-        "@babel/core": "^7.8.6",
-        "@babel/preset-env": "^7.8.7",
-        "@babel/preset-typescript": "^7.12.7",
         "@tophat/eslint-config": "^0.7.0",
         "@types/jest": "26.0.23",
         "@types/node": "14.17.2",
-        "@typescript-eslint/eslint-plugin": "^4.9.1",
-        "@typescript-eslint/parser": "^4.9.1",
+        "@typescript-eslint/eslint-plugin": "^4.26.0",
+        "@typescript-eslint/parser": "^4.26.0",
         "eslint": "^7.0.0",
         "eslint-config-prettier": "8.3.0",
         "eslint-import-resolver-node": "^0.3.4",
@@ -56,6 +52,7 @@
         "eslint-plugin-prettier": "3.4.0",
         "jest": "27.0.4",
         "prettier": "2.3.1",
-        "typescript": "^4.1.3"
+        "ts-jest": "^27.0.2",
+        "typescript": "^4.3.2"
     }
 }
