--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Use Node.js 12.x
       uses: actions/setup-node@v3
       with:
-        node-version: 12.x
+        node-version: 18
     - run: yarn
     - run: yarn lint
   test:
@@ -22,7 +22,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x]
+        node-version: [14, 16, 18]
 
     steps:
     - uses: actions/checkout@v3
@@ -42,7 +42,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [12.x, 14.x]
+        node-version: [14, 16, 18]
 
     steps:
     - uses: actions/checkout@v3
