--- a/package.json
+++ b/package.json
@@ -39,20 +39,20 @@
         "types:watch": "yarn types --watch"
     },
     "devDependencies": {
-        "@tophat/eslint-config": "0.9.0",
-        "@types/jest": "26.0.23",
-        "@types/node": "14.17.2",
-        "@typescript-eslint/eslint-plugin": "^4.26.0",
-        "@typescript-eslint/parser": "^4.26.0",
-        "eslint": "^7.0.0",
-        "eslint-config-prettier": "8.3.0",
-        "eslint-import-resolver-node": "^0.3.4",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-jest": "^24.1.5",
-        "eslint-plugin-prettier": "3.4.0",
-        "jest": "27.0.4",
-        "prettier": "2.3.1",
-        "ts-jest": "27.0.3",
-        "typescript": "^4.3.2"
+        "@tophat/eslint-config": "^6.0.1",
+        "@types/jest": "^29.5.0",
+        "@types/node": "^18.15.5",
+        "@typescript-eslint/eslint-plugin": "^5.56.0",
+        "@typescript-eslint/parser": "^5.56.0",
+        "eslint": "^8.36.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-import-resolver-node": "^0.3.7",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-jest": "^27.2.1",
+        "eslint-plugin-prettier": "^4.2.1",
+        "jest": "^29.5.0",
+        "prettier": "^2.8.5",
+        "ts-jest": "^29.0.5",
+        "typescript": "^4.3.0"
     }
 }
