--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,6 +29,7 @@ jobs:
       run: yarn
   lint:
     runs-on: ubuntu-latest
+    needs: dependencies
 
     steps:
     - uses: actions/checkout@v3
@@ -45,6 +46,7 @@ jobs:
     - run: yarn lint
   test:
     runs-on: ubuntu-latest
+    needs: dependencies
 
     strategy:
       matrix:
@@ -72,6 +74,7 @@ jobs:
   
   build:
     runs-on: ubuntu-latest
+    needs: dependencies
     strategy:
       matrix:
         node-version: [14, 16, 18]
